# safe-goto

./: Cargo.toml  LICENSE-MIT  README.md
examples/: references.rs  single_input.rs  user_input.rs
examples/single_input/: about.md  single_input,c  single_input.c  single_input.rs  single_input_c.asm  single_input_c.txt  single_input_rs.asm  single_input_rs.txt
src/: lib.rs
tests/: behavior.rs  compilation.rs  test.rs
