[package]
name = "safe-goto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = {version = "1.0.103", features = ["full"] }
