[package]
name = "safe-goto"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Emulating a safe goto-like instruction in Rust in the spirit of the \"Safe goto with value\" pre-RFC from IRLO"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = {version = "1.0.103", features = ["full"] }
